force-app/main/default/objects/YS_SignatureRequest__c/YS_SignatureRequest__c.object-meta.xml
<CustomObject>
    <label>YS Signature Request</label>
    <nameField>
        <label>YS Signature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>YS Signature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>