force-app/main/default/objects/YS_SignatureRequest__c/fields/DeliveryMode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMode__c</fullName>
    <description>Method of delivery of the Document</description>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YS_DeliveryMode</valueSetName>
    </valueSet>
</CustomField>