force-app/main/default/objects/YS_SignatureRequest__c/fields/LastEventDate__c.field-meta.xml
<CustomField>
    <fullName>LastEventDate__c</fullName>
    <description>Last webhook event that triggered an update</description>
    <label>Last Event Date</label>
    <type>DateTime</type>
</CustomField>