force-app/main/default/objects/YS_SignatureRequest__c/fields/LinkInYousign__c.field-meta.xml
<CustomField>
    <fullName>LinkInYousign__c</fullName>
    <description>Link to view the Signature Request in Yousign</description>
    <formula>IF(ISBLANK(ExternalId__c),
    null,
    HYPERLINK(&apos;https://yousign.app/auth/workspace/requests/&apos; &amp; ExternalId__c, &quot;Signature Request&quot;, &apos;_blank&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link in Yousign</label>
    <type>Text</type>
</CustomField>