force-app/main/default/objects/YS_SignatureRequest__c/fields/MaxNumberOfReminders__c.field-meta.xml
<CustomField>
    <fullName>MaxNumberOfReminders__c</fullName>
    <description>Maximum number of reminder sent to a single singer or approver</description>
    <label>Max Number of Reminders</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>