force-app/main/default/objects/YS_SignatureRequest__c/fields/NbSigners__c.field-meta.xml
<CustomField>
    <fullName>NbSigners__c</fullName>
    <description>Number of Signers on the Signature Request</description>
    <label># Signers</label>
    <summaryForeignKey>YS_Signer__c.SignatureRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>