force-app/main/default/objects/YS_SignatureRequest__c/fields/NbSignersSigned__c.field-meta.xml
<CustomField>
    <fullName>NbSignersSigned__c</fullName>
    <description>Number of Signers that have already signed the Signature Request</description>
    <label># Signers Signed</label>
    <summaryFilterItems>
        <field>YS_Signer__c.Status__c</field>
        <operation>equals</operation>
        <value>signed</value>
    </summaryFilterItems>
    <summaryForeignKey>YS_Signer__c.SignatureRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>