force-app/main/default/objects/YS_SignatureRequest__c/fields/ReminderFrequency__c.field-meta.xml
<CustomField>
    <fullName>ReminderFrequency__c</fullName>
    <description>Frequency of sending an automatic reminder to the ongoing signer or approver</description>
    <label>Reminder Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Daily</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Every 2 days</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Every 2 weeks</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>