force-app/main/default/objects/YS_SignatureRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Signature Request</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>ongoing</fullName>
                <label>Ongoing</label>
            </value>
            <value>
                <fullName>done</fullName>
                <label>Done</label>
            </value>
            <value>
                <fullName>deleted</fullName>
                <label>Deleted</label>
            </value>
            <value>
                <fullName>expired</fullName>
                <label>Expired</label>
            </value>
            <value>
                <fullName>canceled</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>approval</fullName>
                <label>Approval</label>
            </value>
            <value>
                <fullName>rejected</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>declined</fullName>
                <label>Declined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>