force-app/main/default/objects/YS_SignatureRequest__c/listViews/SignedSignatureRequests.listView-meta.xml
<ListView>
    <fullName>SignedSignatureRequests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>NbSigners__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LastEventDate__c</columns>
    <columns>LinkInYousign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>done</value>
    </filters>
    <label>Signed Signature Requests</label>
</ListView>